--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mmk520.github.io/my-app",
+  "homepage": "http://mmk520.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
